[gd_scene load_steps=2 format=3 uid="uid://ba6m63vr3xhqn"]

[ext_resource type="Script" uid="uid://c26plrptvpp20" path="res://Menu/lobbyManager.gd" id="1_cn352"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cn352")

[node name="InLobby" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Players" type="Panel" parent="InLobby"]
layout_mode = 0
offset_left = 901.0
offset_top = 125.0
offset_right = 1113.0
offset_bottom = 548.0

[node name="PlayersTitle" type="Label" parent="InLobby/Players"]
layout_mode = 0
offset_left = 4.0
offset_top = -1.0
offset_right = 209.0
offset_bottom = 22.0
text = "players:"

[node name="PlayersBox" type="RichTextLabel" parent="InLobby/Players"]
layout_mode = 0
offset_left = 14.0
offset_top = 24.0
offset_right = 200.0
offset_bottom = 409.0

[node name="Message" type="Panel" parent="InLobby"]
layout_mode = 0
offset_left = 224.0
offset_top = 571.0
offset_right = 862.0
offset_bottom = 627.0

[node name="MessageBox" type="TextEdit" parent="InLobby/Message"]
layout_mode = 0
offset_left = 9.0
offset_top = 10.0
offset_right = 628.0
offset_bottom = 48.0
placeholder_text = "Type a message here...."

[node name="Leave" type="Button" parent="InLobby"]
layout_mode = 0
offset_left = 18.0
offset_top = 22.0
offset_right = 191.0
offset_bottom = 81.0
text = "Leave lobby"

[node name="Start" type="Button" parent="InLobby"]
layout_mode = 0
offset_left = 18.0
offset_top = 569.0
offset_right = 191.0
offset_bottom = 628.0
text = "Start game"

[node name="Chat" type="Panel" parent="InLobby"]
layout_mode = 0
offset_left = 223.0
offset_top = 125.0
offset_right = 861.0
offset_bottom = 549.0

[node name="LobbyTitle" type="Label" parent="InLobby/Chat"]
layout_mode = 0
offset_left = 7.0
offset_top = 6.0
offset_right = 638.0
offset_bottom = 29.0
text = "player's lobby:"

[node name="ChatBox" type="RichTextLabel" parent="InLobby/Chat"]
layout_mode = 0
offset_left = 12.0
offset_top = 29.0
offset_right = 627.0
offset_bottom = 413.0
scroll_following = true

[node name="Browse" type="Button" parent="."]
layout_mode = 0
offset_left = 15.0
offset_top = 170.0
offset_right = 188.0
offset_bottom = 229.0
text = "Browse"

[node name="Host" type="Button" parent="."]
layout_mode = 0
offset_left = 14.0
offset_top = 96.0
offset_right = 187.0
offset_bottom = 155.0
text = "Host"

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_left = 15.0
offset_top = 22.0
offset_right = 188.0
offset_bottom = 81.0
text = "Back"

[node name="PopupPanel" type="PopupPanel" parent="."]
oversampling_override = 1.0
initial_position = 1
size = Vector2i(800, 500)

[node name="Lobbies" type="Panel" parent="PopupPanel"]
offset_left = 4.0
offset_top = 4.0
offset_right = 796.0
offset_bottom = 496.0

[node name="LobbiesTitle" type="Label" parent="PopupPanel/Lobbies"]
layout_mode = 0
offset_left = 5.0
offset_top = -2.0
offset_right = 381.0
offset_bottom = 47.0
text = "Lobbies:"
vertical_alignment = 1

[node name="Scroll" type="ScrollContainer" parent="PopupPanel/Lobbies"]
layout_mode = 0
offset_left = 13.0
offset_top = 40.0
offset_right = 615.0
offset_bottom = 475.0

[node name="LobbiesBox" type="VBoxContainer" parent="PopupPanel/Lobbies/Scroll"]
layout_mode = 2

[node name="Close" type="Button" parent="PopupPanel/Lobbies"]
layout_mode = 0
offset_left = 648.0
offset_top = 413.0
offset_right = 775.0
offset_bottom = 475.0
text = "Close
"

[connection signal="gui_input" from="InLobby/Message/MessageBox" to="." method="_on_message_box_gui_input"]
[connection signal="pressed" from="InLobby/Leave" to="." method="_on_leave_pressed"]
[connection signal="pressed" from="InLobby/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Browse" to="." method="_on_browse_pressed"]
[connection signal="pressed" from="Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="PopupPanel/Lobbies/Close" to="." method="_on_close_pressed"]
